Go/Test/WebServer2/kube/goapiapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapiapp-deployment
  namespace: goapi
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: goapiapp
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: goapiapp
    spec:
      containers:
        - name: goapiapp
          image: centos03.testcorp.local:5000/goapi:v1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          env:
            - name: MONGODBSERVERNAME
              value: "goapimongo-service.goapi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
