Go/Test/WebServer2/kube/goapiapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goapiapp-service
  namespace: goapi
spec:
  selector: 
    app: goapiapp
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 30001
