Go/Test/WebServer2/kube/goapiingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-goapi
  namespace: goapi
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /goapi

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: goapi
  namespace: goapi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: goapi-mw-goapi@kubernetescrd

spec:
  rules:
    - host: centos05.testcorp.local
      http:
        paths:
          - path: /goapi
            pathType: Exact
            backend:
              service:
                name: goapiapp-service
                port:
                  number: 8080
          - path: /goapi/posts
            pathType: Exact
            backend:
              service:
                name: goapiapp-service
                port:
                  number: 8080
          - path: /goapi/post
            pathType: Prefix
            backend:
              service:
                name: goapiapp-service
                port:
                  number: 8080
