Go/Test/WebServer2/kube/goapimongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goapimongo-service
  namespace: goapi
spec:
  selector: 
    app: goapimongo
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 27017
      targetPort: 27017
